# leno

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  release.yml  test.yml  update.yml
docs/: conf.py  data.md  index.md  install.md  notes.md  queries.md
leno/: cli.py  lib.py  source.py
tests/: fixtures.py  test_cli.py  test_leno.py  test_source.py
tests/config/: markdownlint.json  mlc_config.json
